--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.15.2"
+    "mysql2": "^3.15.2",
+    "react-phone-number-input": "^3.4.12"
   }
 }
