--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,8 @@ jobs:
           script: |
             set -e
             
-            # IMPORTANT: Replace this with the full path to your project directory on the VM
-            cd /path/to/your/gridspark-backend 
+            # Navigate to the project directory on the VM
+            cd /home/dev/gridspark-backend 
             
             echo "Successfully changed directory. Pulling latest image..."
             docker compose pull
