--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,19 @@
 server {
     listen 80;
-    server_name _; # Listen on all hostnames
+    server_name gridsparksolutions.com www.gridsparksolutions.com;
 
-    location / {
+    # Proxy API requests to Node.js backend
+    location /api/ {
         proxy_pass http://app:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Serve frontend static files for all other requests
+    location / {
+        root /usr/share/nginx/html; # Path to your built frontend files
+        try_files $uri $uri/ /index.html;
     }
 }
