--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,7 +13,7 @@ server {
 
     # Serve frontend static files for all other requests
     location / {
-        root /usr/share/nginx/html; # Path to your built frontend files
+        root /usr/share/nginx/html; # Path to your built frontend files (adjust if different)
         try_files $uri $uri/ /index.html;
     }
 }
