--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,52 +1,73 @@
+# === BLOCK 1: API - HTTP to HTTPS Redirect ===
+# Listens on port 80 for your API subdomain.
 server {
     listen 80;
-    server_name gridsparksolutions.com www.gridsparksolutions.com;
+    server_name api.gridsparksolutions.com;
 
-    # Proxy API requests to Node.js backend
-    location /api/ {
+    # Handles Let's Encrypt validation.
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redirects all other HTTP traffic to secure HTTPS.
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# === BLOCK 2: FRONTEND - HTTP to HTTPS Redirect ===
+# Listens on port 80 for your main domain.
+server {
+    listen 80;
+    server_name www.gridsparksolutions.com gridsparksolutions.com;
+
+    # Handles Let's Encrypt validation for the frontend.
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redirects all other HTTP traffic to secure HTTPS.
+    location / {
+        return 301 https://www.gridsparksolutions.com$request_uri;
+    }
+}
+
+# === BLOCK 3: API - Secure HTTPS Proxy ===
+# This is the main server block for your backend API.
+server {
+    listen 443 ssl;
+    server_name api.gridsparksolutions.com;
+
+    # SSL certificate provided by Certbot.
+    ssl_certificate /etc/letsencrypt/live/api.gridsparksolutions.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.gridsparksolutions.com/privkey.pem;
+
+    # Proxy all requests to your Node.js container.
+    location / {
         proxy_pass http://app:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-# Server block to handle HTTP to HTTPS redirection and Let's Encrypt challenges
-server {
-    listen 80;
-    server_name api.gridsparksolutions.com;
-
-    # Route for Let's Encrypt certificate validation
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    # Redirect all other HTTP traffic to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
 }
 
-# Server block for handling secure HTTPS traffic
+# === BLOCK 4: FRONTEND - Secure HTTPS Static File Serving ===
+# This is the main server block for your React frontend.
 server {
     listen 443 ssl;
-    server_name api.gridsparksolutions.com;
+    server_name www.gridsparksolutions.com gridsparksolutions.com;
 
-    # SSL Certificate paths (Certbot will create these)
-    ssl_certificate /etc/letsencrypt/live/api.gridsparksolutions.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.gridsparksolutions.com/privkey.pem;
+    # SSL certificate for your main domain (you will generate this next).
+    ssl_certificate /etc/letsencrypt/live/www.gridsparksolutions.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.gridsparksolutions.com/privkey.pem;
 
-    # Proxy configuration for the backend Node.js application
-    location /api {
-        proxy_pass http://app:3000; # Forward to the 'app' service on port 3000
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-    # Serve frontend static files for all other requests
+    # The location of your built React app files.
+    root /var/www/frontend;
+    index index.html;
+
+    # This ensures that routing within your React app works correctly.
     location / {
-        root /usr/share/nginx/html; # Path to your built frontend files (adjust if different)
         try_files $uri $uri/ /index.html;
     }
 }
