--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,48 +1,37 @@
-# === BLOCK 1: API - HTTP to HTTPS Redirect ===
-# Listens on port 80 for your API subdomain.
+# === BLOCK 1: API - HTTP to HTTPS Redirect (No Changes) ===
 server {
     listen 80;
     server_name api.gridsparksolutions.com;
 
-    # Handles Let's Encrypt validation.
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-
-    # Redirects all other HTTP traffic to secure HTTPS.
     location / {
         return 301 https://$host$request_uri;
     }
 }
 
-# === BLOCK 2: FRONTEND - HTTP to HTTPS Redirect ===
-# Listens on port 80 for your main domain.
+# === BLOCK 2: FRONTEND - HTTP to HTTPS Redirect (Updated) ===
 server {
     listen 80;
-    server_name www.gridsparksolutions.com gridsparksolutions.com;
+    server_name www.gridsparksolutions.com; # <-- Change is here
 
-    # Handles Let's Encrypt validation for the frontend.
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-
-    # Redirects all other HTTP traffic to secure HTTPS.
     location / {
         return 301 https://www.gridsparksolutions.com$request_uri;
     }
 }
 
-# === BLOCK 3: API - Secure HTTPS Proxy ===
-# This is the main server block for your backend API.
+# === BLOCK 3: API - Secure HTTPS Proxy (No Changes) ===
 server {
     listen 443 ssl;
     server_name api.gridsparksolutions.com;
 
-    # SSL certificate provided by Certbot.
     ssl_certificate /etc/letsencrypt/live/api.gridsparksolutions.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.gridsparksolutions.com/privkey.pem;
 
-    # Proxy all requests to your Node.js container.
     location / {
         proxy_pass http://app:3000;
         proxy_set_header Host $host;
@@ -52,21 +41,17 @@ server {
     }
 }
 
-# === BLOCK 4: FRONTEND - Secure HTTPS Static File Serving ===
-# This is the main server block for your React frontend.
+# === BLOCK 4: FRONTEND - Secure HTTPS Static File Serving (Updated) ===
 server {
     listen 443 ssl;
-    server_name www.gridsparksolutions.com gridsparksolutions.com;
+    server_name www.gridsparksolutions.com; # <-- Change is here
 
-    # SSL certificate for your main domain (you will generate this next).
     ssl_certificate /etc/letsencrypt/live/www.gridsparksolutions.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/www.gridsparksolutions.com/privkey.pem;
 
-    # The location of your built React app files.
     root /var/www/frontend;
     index index.html;
 
-    # This ensures that routing within your React app works correctly.
     location / {
         try_files $uri $uri/ /index.html;
     }
