--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,58 +1,37 @@
-# === BLOCK 1: API - HTTP to HTTPS Redirect (No Changes) ===
+# === BLOCK 1: API - HTTP to HTTPS Redirect ===
+# This block listens for insecure HTTP requests and redirects them to secure HTTPS.
+# It also handles the Let's Encrypt validation requests.
 server {
     listen 80;
     server_name api.gridsparksolutions.com;
 
+    # Route for Let's Encrypt certificate validation
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+
+    # Redirect all other HTTP traffic to secure HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
 }
 
-# === BLOCK 2: FRONTEND - HTTP to HTTPS Redirect (Updated) ===
-server {
-    listen 80;
-    server_name www.gridsparksolutions.com; # <-- Change is here
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-    location / {
-        return 301 https://www.gridsparksolutions.com$request_uri;
-    }
-}
-
-# === BLOCK 3: API - Secure HTTPS Proxy (No Changes) ===
+# === BLOCK 2: API - Secure HTTPS Proxy ===
+# This is the main block that handles all secure traffic to your API.
 server {
     listen 443 ssl;
     server_name api.gridsparksolutions.com;
 
+    # SSL certificate provided by Certbot
     ssl_certificate /etc/letsencrypt/live/api.gridsparksolutions.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.gridsparksolutions.com/privkey.pem;
 
+    # This proxies all requests to your Node.js application running in its container
     location / {
         proxy_pass http://app:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-
-# === BLOCK 4: FRONTEND - Secure HTTPS Static File Serving (Updated) ===
-server {
-    listen 443 ssl;
-    server_name www.gridsparksolutions.com; # <-- Change is here
-
-    ssl_certificate /etc/letsencrypt/live/www.gridsparksolutions.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.gridsparksolutions.com/privkey.pem;
-
-    root /var/www/frontend;
-    index index.html;
-
-    location / {
-        try_files $uri $uri/ /index.html;
     }
 }
