--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,32 +1,9 @@
-# === BLOCK 1: API - HTTP to HTTPS Redirect ===
-# This block listens for insecure HTTP requests and redirects them to secure HTTPS.
-# It also handles the Let's Encrypt validation requests.
+# === HTTP-ONLY CONFIGURATION FOR TESTING ===
+
 server {
     listen 80;
     server_name api.gridsparksolutions.com;
 
-    # Route for Let's Encrypt certificate validation
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    # Redirect all other HTTP traffic to secure HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# === BLOCK 2: API - Secure HTTPS Proxy ===
-# This is the main block that handles all secure traffic to your API.
-server {
-    listen 443 ssl;
-    server_name api.gridsparksolutions.com;
-
-    # SSL certificate provided by Certbot
-    ssl_certificate /etc/letsencrypt/live/api.gridsparksolutions.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.gridsparksolutions.com/privkey.pem;
-
-    # This proxies all requests to your Node.js application running in its container
     location / {
         proxy_pass http://app:3000;
         proxy_set_header Host $host;
